Hystrix断路器、控制面板在ribbion中与feign中的使用

--- a/service-ribbon/pom.xml
+++ b/service-ribbon/pom.xml
@@ -44,6 +44,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--引入hystrix断路由-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+        <!--actuator 监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--hystrix-dashboard-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
