--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -44,6 +44,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--actuator 监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--hystrix-dashboard-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
