--- a/service-feign/src/main/resources/application.properties
+++ b/service-feign/src/main/resources/application.properties
@@ -4,5 +4,18 @@ server.port=8005
 spring.application.name=service-feign
 #Eureka Server地址
 eureka.client.service-url.defaultZone=http://127.0.0.1:8001/eureka/
+#打开feign中发Hystrix断路器功能
+feign.hystrix.enabled=true
 
+#springboot监控 actuator 配置
+info.app.name=spring-boot-actuator
+info.app.version= 1.0.0
+info.app.test=test
 
+#配置打开所有监控端点
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+#代表启用单独的url地址来监控 Spring Boot 应用，为了安全一般都启用独立的端口来访问后端的监控信息
+#management.endpoints.web.base-path=/monitor
+#启用接口关闭 Spring Boot
+management.endpoint.shutdown.enabled=true
